2008-04-23  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=380339 - Crash when
	there are two main-menu applets.

	* libslab-utils.c (libslab_thumbnail_factory_preinit): Check if
	the idle handler is already set up, so we don't try to initialize
	the factory twice if there is more than one main-menu applet
	(e.g. for multiple monitors).

2008-04-09  Federico Mena Quintero  <federico@novell.com>

	* bookmark-agent.c (create_doc_item): Don't leak the template
	filename.

2008-04-08  Federico Mena Quintero  <federico@novell.com>

	* bookmark-agent.c (bookmark_agent_remove_item): Free the uris we
	got from the GBookmarkFile.
	(load_xbel_store): Likewise.

2008-04-04  Federico Mena Quintero  <federico@novell.com>

	* libslab-utils.c (libslab_checkpoint_init): New public function;
	initializes a checkpoint file.
	(libslab_checkpoint): New public function to add checkpoints to
	the code for profiling purposes.
	(libslab_thumbnail_factory_preinit): New public function to queue
	the initialization of the thumbnail factory in an idle handler.
	With this we can create the thumbnail factory between the applet
	hitting the main loop initially and the user activating the
	Computer menu.
	(libslab_thumbnail_factory_get): New public function.

	* bookmark-agent.c (bookmark_agent_update_from_bookmark_file): New
	public function; allows the caller to update a BookmarkAgent
	explicitly from a given GBookmarkFile.  This makes the
	BookmarkAgent not monitor the recent-files store on its own, to
	give more control to the caller.

	* document-tile.c (document_tile_new): Don't call load_image()
	here; it already gets done in document_tile_style_set().
	(load_image): Use libslab_thumbnail_factory_get() to use the
	global thumbnail factory, instead of one of our own.

2008-03-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: only set libtool versioning when building dynamic lib.

==================== 0.9.9 ====================
